# ask_anywhere

./: CLAUDE.md  README.md  package-lock.json  package.json  popup.html  screenshot-selector.html  tailwind.config.js  vite.config.ts
.github/workflows/: build_and_publish.yml
src/: App.css  App.tsx  api.ts  index.css  popup.tsx  screenshot-selector.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_client.rs  clipboard.rs  config.rs  lib.rs  main.rs  screenshot.rs
src/components/: ConfigPage.css  ConfigPage.tsx  PopupWindow.css  PopupWindow.tsx
src/services/: aiClient.ts
